Now everything must work